Head is done in HTML

--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <img id="profile picture" src="" alt="Profilna slika">
     <div id="1">
         <h1 id="ime">Andraž Dreo Kamenik</h1>
-        <h3 id="naslov">Knafelčeva ulica 24, 2000 Maribor, Slovenija</h3>
+        <h3 id="naslov1">Knafelčeva ulica 24, 2000 Maribor, Slovenija</h3>
+        <ol id="naslov2">
+            <li>e-mail: <a href="mailto:andraz.kamenik@gmail.com">andraz.kamenik@gmail.com</a></li>
+            <li>Telefon: <a href="tel:+38631397748">+386 31397748</a></li>
+        </ol>
     </div>
     <ul id="links">
-        <li>O meni</li>
-        <li>Delovne izkušnje</li>
-        <li>Certifikati</li>
-        <li>Jeziki</li>
-        <li>Drugi dokumenti</li>
+        <li><a href="o meni"></a> O meni</li>
+        <li><a href="izkušnje"></a> Delovne izkušnje</li>
+        <li><a href="certifikati"></a> Certifikati</li>
+        <li><a href="jeziki"></a> Jeziki</li>
+        <li><a href="drugo"></a> Druge informacije</li>
     </ul>
 </header>
 <body id="telo">
@@ -28,6 +32,13 @@
     <div id="certifikati">
         <h2>Certifikati</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    </div>
+    <div id="jeziki">
+        <ul>
+            <li>Slovenščina (materni jezik)</li>
+            <li>Nemščina C1</li>
+            <li>Angleščina C1</li>
+        </ul>
     </div>
     <div id="drugo">
         <h2>Druge informacije</h2>
