Some minor bug fixes and the section O meni

--- a/index.html
+++ b/index.html
@@ -13,19 +13,28 @@
         </ol>
     </div>
     <ul id="links">
-        <li><a href="o meni"></a> O meni</li>
-        <li><a href="izkušnje"></a> Delovne izkušnje</li>
-        <li><a href="certifikati"></a> Certifikati</li>
-        <li><a href="jeziki"></a> Jeziki</li>
-        <li><a href="drugo"></a> Druge informacije</li>
+        <li><a href="#o meni">O meni</a></li>
+        <li><a href="#izkusnje">Delovne izkušnje</a></li>
+        <li><a href="#certifikati">Certifikati</a></li>
+        <li><a href="#jeziki">Jeziki</a></li>
+        <li><a href="#drugo">Druge informacije</a></li>
     </ul>
 </header>
 <body id="telo">
     <div id="o meni">
         <h2>O meni</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>Pozdravljeni na moji osebni spletni strani. Stran služi kot moj CV in je popolnoma moje lastno delo.</p>
+        <p>V kolikor bi moral opisati samega sebe z eno besedo bi se opisal kot inovativen. Zakaj inovativen? Da si inovativen pomeni, da si sposoben hitrega učenja, usmerjenost k rešitvam,
+            pozitivna naravnanost, širok nabor znanja.
+        </p>
+        <p>Moja karierna pot ni potekala v ravni črti. Opravljal sem tako fizična kot mentalna dela. To mi je omogočilo, da sem pridobil vpogled v različne svetove in različne načine življenja.
+            Slednje pa je izoblikovalo moje razmišljanje in moj pristop k delu.
+        </p>
+        <p><b>Kaj dejansko iščem in kaj pričakujem od delodajalca?</b> 
+            <br>Iščem delovno mesto, ki mi bo omogočalo normalno preživljanje časa z družino, omogočilo željen življenski stil, in mi dalo občutek vrednosti</p>
+        <p></p>
     </div>
-    <div id="izkušnje">
+    <div id="izkusnje">
         <h2>Delovne izkušnje</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     </div>
