--- a/index.html
+++ b/index.html
@@ -24,14 +24,24 @@
     <div id="o meni">
         <h2>O meni</h2>
         <p>Pozdravljeni na moji osebni spletni strani. Stran služi kot moj CV in je popolnoma moje lastno delo.</p>
-        <p>V kolikor bi moral opisati samega sebe z eno besedo bi se opisal kot inovativen. Zakaj inovativen? Da si inovativen pomeni, da si sposoben hitrega učenja, usmerjenost k rešitvam,
-            pozitivna naravnanost, širok nabor znanja.
+        <p>Kdo sem jaz in kaj je moja bit. Atributi, ki bi me najbolje opisali so zvedavost, kreativnost, razmislek, sanjavost; Moja bit je ves čas na poti do neznanega cilja,
+            in na tej poti išče smisel v samem življenju, vesolju in medsebojnih odnosih. 
         </p>
-        <p>Moja karierna pot ni potekala v ravni črti. Opravljal sem tako fizična kot mentalna dela. To mi je omogočilo, da sem pridobil vpogled v različne svetove in različne načine življenja.
-            Slednje pa je izoblikovalo moje razmišljanje in moj pristop k delu.
+        <p>Med glavne interese, ki zapolnjujejo moj čas so znanost, računalniške igre, marketing, in organiziranje družbe in organizacij.
+        </p>
+        <p>Moja karierna pot je tako odraz moje biti in mojega iskanja smisla. Po naravi sem izrtedno ustrežljiva oseba, ki jo vodi želja po koristnosti. Na tej karierni poti sem tako opravljal fizična,
+            kot tudi mentalna dela. Kar je bilo vsem tem službam skupnega je bila moja sposobnost izrazito hitrega učenja in prilaganja. Vendar moja pot ni bila lahka in je v tem trenutku sestavljena
+            iz treh poglavju.
+        </p>
+        <p>Prvo poglavje je bilo iskanje stabilne zaposlitve. To je bilo obdobje, ko sem iskal zaposlitev in sem opravljal prostovolna dela. Takrat sem si pridobil izkušnje pisanja razpisov,
+            prostovlnega dela, vodenja ekip, in vodenja projektov. 
+        </p>
+        <p>Drugo poglavje je bilo iskanje poti v rodni kraj. V tem obdobju sem našel sicer stabilne službe vendar so bile vse vezane na tujino. TO je bil čas ko sem po več mesecev prebil v tujini.
+            Delo je bilo fizične narave, vendar sem imel priložnost zavzeti bolj odgovorne vloge znotraj ekip in sem deloval kot vodja ekip ali kot mediator med lokalnim vodstvom in zaposlenimi podjetja za katerega sem dela. 
         </p>
         <p><b>Kaj dejansko iščem in kaj pričakujem od delodajalca?</b> 
-            <br>Iščem delovno mesto, ki mi bo omogočalo normalno preživljanje časa z družino, omogočilo željen življenski stil, in mi dalo občutek vrednosti</p>
+            <br>Iščem delovno mesto, ki mi bo omogočalo normalno preživljanje časa z družino, omogočilo željen življenski stil, in mi dalo občutek vrednosti. Želim si dodatnega znanja in osebnostne rasti.
+        </p>
         <p></p>
     </div>
     <div id="izkusnje">
