--- a/index.html
+++ b/index.html
@@ -48,14 +48,34 @@
         <h2>Delovne izkušnje</h2>
         <ul>
             <li>
+                <h3>CEO</h3>
+                <p>Poslovno svetovanje Andraž Dreo Kamenik s.p.</p>
+                <p>Junij 2021 - Sedaj</p>
+                <p>Maribor, Slovenija</p>
+            </li>
+            <li>
                 <h3>Poslovni analitik</h3>
-
+                <p>Crif</p>
+                <p>Februar 2020 - Sedaj</p>
+                <p>Maribor, Slovenija</p>
+            </li>
+            <li>
+                <h3>Projektni vodja</h3>
+                <p>Vinibis</p>
+                <p>Junij 2019 - Februar 2020</p>
+                <p>Ljubljana, Slovenija</p>
             </li>
         </ul>
     </div>
     <div id="certifikati">
         <h2>Certifikati</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <ul>
+        <li>
+        <h3>Responsive Web Design</h3>
+        <p>December 2021</p>
+        <button type="button"> <a href="https://www.freecodecamp.org/certification/fcc52bfc642-08ab-4236-b4cf-14185d2308c1/responsive-web-design">Certifikat</a></button>
+        </li>
+    </ul>
     </div>
     <div id="jeziki">
         <h2>Jeziki</h2>
