--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 </head>
 
-<header id="glava">
+<header class="glava">
     <img id="profile picture" src="" alt="Profilna slika">
     <div id="1">
         <h1 id="ime">Andraž Dreo Kamenik</h1>
@@ -20,8 +20,8 @@
         <li><a href="#drugo">Druge informacije</a></li>
     </ul>
 </header>
-<body id="telo">
-    <div id="o meni">
+<body class="telo">
+    <div class="okvir">
         <h2>O meni</h2>
         <p>Pozdravljeni na moji osebni spletni strani. Stran služi kot moj CV in je popolnoma moje lastno delo.</p>
         <p>Kdo sem jaz in kaj je moja bit. Atributi, ki bi me najbolje opisali so zvedavost, kreativnost, razmislek, sanjavost; Moja bit je ves čas na poti do neznanega cilja,
@@ -44,30 +44,30 @@
         </p>
         <p></p>
     </div>
-    <div id="izkusnje">
+    <div class="okvir">
         <h2>Delovne izkušnje</h2>
         <ul>
             <li>
-                <h3>CEO</h3>
+                <h3 class="izkušnje">CEO</h3>
                 <p>Poslovno svetovanje Andraž Dreo Kamenik s.p.</p>
                 <p>Junij 2021 - Sedaj</p>
                 <p>Maribor, Slovenija</p>
             </li>
             <li>
-                <h3>Poslovni analitik</h3>
+                <h3 class="izkušnje">Poslovni analitik</h3>
                 <p>Crif</p>
                 <p>Februar 2020 - Sedaj</p>
                 <p>Maribor, Slovenija</p>
             </li>
             <li>
-                <h3>Projektni vodja</h3>
+                <h3 class="izkušnje">Projektni vodja</h3>
                 <p>Vinibis</p>
                 <p>Junij 2019 - Februar 2020</p>
                 <p>Ljubljana, Slovenija</p>
             </li>
         </ul>
     </div>
-    <div id="certifikati">
+    <div class="okvir">
         <h2>Certifikati</h2>
     <ul>
         <li>
@@ -77,7 +77,7 @@
         </li>
     </ul>
     </div>
-    <div id="jeziki">
+    <div class="okvir">
         <h2>Jeziki</h2>
         <ul>
             <li>Slovenščina (materni jezik)</li>
@@ -85,10 +85,11 @@
             <li>Angleščina C1</li>
         </ul>
     </div>
-    <div id="drugo">
+    <div class="okvir">
         <h2>Druge informacije</h2>
         <ol>
             <li>Vozniška B kategorije</li>
         </ol>
     </div>
 </body>
+<footer></footer>
