--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <head>
-<link rel="stylesheet" href="Style/style.css" type="text/css">
+<style>
+.glava {
+    border: 1px, solid, black;
+    border-radius: 8px;
+    margin: 0 avto;
+}
+</style>
 </head>
 
 <header class="glava">
