--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <head>
-<style>
-header {
-    border: 1px, solid, black;
-    border-radius: 8px;
-    margin: 0 avto;
-}
-</style>
+<link rel="stylesheet" href="Style/style.css" type="text/css">
 </head>
 
 <header class="glava">
