--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
-<link rel="stylesheet" href="Style/style.css" type="text/css">
+<link rel="stylesheet" href="Style/style.css">
 </head>
 
 <header class="glava">
-    <img id="profile picture" src="" alt="Profilna slika">
-    <div id="1">
+    <img id="profilePicture" src="image/20230407_133106.jpg" alt="Profilna slika">
+    <div id="naslovnaKartica">
         <h1 id="ime">Andraž Dreo Kamenik</h1>
         <h3 id="naslov1">Knafelčeva ulica 24, 2000 Maribor, Slovenija</h3>
         <ol id="naslov2">
@@ -12,13 +12,7 @@
             <li>Telefon: <a href="tel:+38631397748">+386 31397748</a></li>
         </ol>
     </div>
-    <ul id="links">
-        <li><a href="#o meni">O meni</a></li>
-        <li><a href="#izkusnje">Delovne izkušnje</a></li>
-        <li><a href="#certifikati">Certifikati</a></li>
-        <li><a href="#jeziki">Jeziki</a></li>
-        <li><a href="#drugo">Druge informacije</a></li>
-    </ul>
+    <button class="button" id="button1" type="button" href="#info">Druge informacije</button>
 </header>
 <body class="telo">
     <div class="okvir">
@@ -73,7 +67,7 @@
         <li>
         <h3>Responsive Web Design</h3>
         <p>December 2021</p>
-        <button type="button"> <a href="https://www.freecodecamp.org/certification/fcc52bfc642-08ab-4236-b4cf-14185d2308c1/responsive-web-design">Certifikat</a></button>
+        <button class="button" type="button"> <a href="https://www.freecodecamp.org/certification/fcc52bfc642-08ab-4236-b4cf-14185d2308c1/responsive-web-design">Certifikat</a></button>
         </li>
     </ul>
     </div>
@@ -85,7 +79,7 @@
             <li>Angleščina C1</li>
         </ul>
     </div>
-    <div class="okvir">
+    <div class="okvir" id="info">
         <h2>Druge informacije</h2>
         <ol>
             <li>Vozniška B kategorije</li>
