I will change how the site looks like

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
+<!DOCTYPE html>
+<html id="background">
 <head>
 <link rel="stylesheet" href="Style/style.css">
+
 </head>
 
 <header class="glava">
     <img id="profilePicture" src="image/20230407_133106.jpg" alt="Profilna slika">
     <div id="naslovnaKartica">
         <h1 id="ime">Andraž Dreo Kamenik</h1>
-        <h3 id="naslov1">Knafelčeva ulica 24, 2000 Maribor, Slovenija</h3>
-        <ol id="naslov2">
-            <li>e-mail: <a href="mailto:andraz.kamenik@gmail.com">andraz.kamenik@gmail.com</a></li>
-            <li>Telefon: <a href="tel:+38631397748">+386 31397748</a></li>
-        </ol>
     </div>
-    <button class="button" id="button1" type="button" href="#info">Druge informacije</button>
 </header>
+
 <body class="telo">
     <div class="okvir">
         <h2>O meni</h2>
@@ -86,4 +84,7 @@
         </ol>
     </div>
 </body>
+
 <footer>2023</footer>
+
+</html>
