--- a/index.html
+++ b/index.html
@@ -13,28 +13,19 @@
 </header>
 
 <body class="telo">
-    <div class="okvir">
-        <h2>O meni</h2>
-        <p>Pozdravljeni na moji osebni spletni strani. Stran služi kot moj CV in je popolnoma moje lastno delo.</p>
-        <p>Kdo sem jaz in kaj je moja bit. Atributi, ki bi me najbolje opisali so zvedavost, kreativnost, razmislek, sanjavost; Moja bit je ves čas na poti do neznanega cilja,
-            in na tej poti išče smisel v samem življenju, vesolju in medsebojnih odnosih. 
-        </p>
-        <p>Med glavne interese, ki zapolnjujejo moj čas so znanost, računalniške igre, marketing, in organiziranje družbe in organizacij.
-        </p>
-        <p>Moja karierna pot je tako odraz moje biti in mojega iskanja smisla. Po naravi sem izrtedno ustrežljiva oseba, ki jo vodi želja po koristnosti. Na tej karierni poti sem tako opravljal fizična,
-            kot tudi mentalna dela. Kar je bilo vsem tem službam skupnega je bila moja sposobnost izrazito hitrega učenja in prilaganja. Vendar moja pot ni bila lahka in je v tem trenutku sestavljena
-            iz treh poglavju.
-        </p>
-        <p>Prvo poglavje je bilo iskanje stabilne zaposlitve. To je bilo obdobje, ko sem iskal zaposlitev in sem opravljal prostovolna dela. Takrat sem si pridobil izkušnje pisanja razpisov,
-            prostovlnega dela, vodenja ekip, in vodenja projektov. 
-        </p>
-        <p>Drugo poglavje je bilo iskanje poti v rodni kraj. V tem obdobju sem našel sicer stabilne službe vendar so bile vse vezane na tujino. TO je bil čas ko sem po več mesecev prebil v tujini.
-            Delo je bilo fizične narave, vendar sem imel priložnost zavzeti bolj odgovorne vloge znotraj ekip in sem deloval kot vodja ekip ali kot mediator med lokalnim vodstvom in zaposlenimi podjetja za katerega sem dela. 
-        </p>
-        <p><b>Kaj dejansko iščem in kaj pričakujem od delodajalca?</b> 
-            <br>Iščem delovno mesto, ki mi bo omogočalo normalno preživljanje časa z družino, omogočilo željen življenski stil, in mi dalo občutek vrednosti. Želim si dodatnega znanja in osebnostne rasti.
-        </p>
-        <p></p>
+    <div class="okvir1">
+        <div class="omeni">
+        <p>Kraj bivanja: Knafelčeva ulica 24, 2000 Maribor</p>
+        <p>Datum rojstva: 25.02.1988</p>
+        <p>Izobrazba Univerzitetni Zgodovinar</p>
+        <p>Izobraževalna ustanova: Filozofska Fakulteta Maribor, Univerza v Mariboru</p>
+        <p>Trenutna zaposlitev: Crif Maribor</p>
+        <p>Posebna znanja: HTML, CSS, JavaScrip</p>
+        <p>Hobi: Računalniške igre, programiranje, risanje, fitnes</p>
+        </div>
+        <div class="youtube">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TtTiihIaP7A?si=SKqxBoe-fQut0Plt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
     </div>
     <div class="okvir">
         <h2>Delovne izkušnje</h2>
@@ -46,7 +37,7 @@
                 <p>Maribor, Slovenija</p>
             </li>
             <li>
-                <h3 class="izkušnje">Poslovni analitik</h3>
+                <h3 class="izkušnje">Poslovni analitik in specialist za GDPR</h3>
                 <p>Crif</p>
                 <p>Februar 2020 - Sedaj</p>
                 <p>Maribor, Slovenija</p>
