--- a/index.html
+++ b/index.html
@@ -27,38 +27,40 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TtTiihIaP7A?si=SKqxBoe-fQut0Plt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
-    <div class="okvir">
-        <h2>Delovne izkušnje</h2>
-        <ul>
-            <li>
-                <h3 class="izkušnje">CEO</h3>
+    <div class="okvir2">
+        <div class="okvir2-1">
+            <h2>Delovne izkušnje</h2>
+        </div>
+    </div>
+    <div class="okvir3">
+        <div class="izkusnje">
+            <h3 >CEO</h3>
                 <p>Poslovno svetovanje Andraž Dreo Kamenik s.p.</p>
                 <p>Junij 2021 - Sedaj</p>
                 <p>Maribor, Slovenija</p>
-            </li>
-            <li>
-                <h3 class="izkušnje">Poslovni analitik in specialist za GDPR</h3>
+        </div>
+        <div class="izkusnje">
+                <h3 >Poslovni analitik in specialist za GDPR</h3>
                 <p>Crif</p>
                 <p>Februar 2020 - Sedaj</p>
                 <p>Maribor, Slovenija</p>
-            </li>
-            <li>
-                <h3 class="izkušnje">Projektni vodja</h3>
+        </div>
+        <div class="izkusnje">
+                <h3 >Projektni vodja</h3>
                 <p>Vinibis</p>
                 <p>Junij 2019 - Februar 2020</p>
                 <p>Ljubljana, Slovenija</p>
-            </li>
-        </ul>
+        </div>
     </div>
-    <div class="okvir">
-        <h2>Certifikati</h2>
-    <ul>
-        <li>
+    <div class="okvir4">
+        <div class="okvir2-1">
+            <h2>Certifikati</h2>
+        </div>
+        <div class="izkusnje">
         <h3>Responsive Web Design</h3>
         <p>December 2021</p>
         <button class="button" type="button"> <a href="https://www.freecodecamp.org/certification/fcc52bfc642-08ab-4236-b4cf-14185d2308c1/responsive-web-design">Certifikat</a></button>
-        </li>
-    </ul>
+        </div>
     </div>
     <div class="okvir">
         <h2>Jeziki</h2>
