--- a/index.html
+++ b/index.html
@@ -56,28 +56,31 @@
         <div class="okvir2-1">
             <h2>Certifikati</h2>
         </div>
-        <div class="izkusnje">
-        <h3>Responsive Web Design</h3>
-        <p>December 2021</p>
-        <button class="button" type="button"> <a href="https://www.freecodecamp.org/certification/fcc52bfc642-08ab-4236-b4cf-14185d2308c1/responsive-web-design">Certifikat</a></button>
+    </div>
+    <div class="okvir4">
+        <div class="izkusnje1">
+            <h3>Responsive Web Design</h3>
+            <p>December 2021</p>
+            <button class="button" type="button"> <a href="https://www.freecodecamp.org/certification/fcc52bfc642-08ab-4236-b4cf-14185d2308c1/responsive-web-design">Certifikat</a></button>
         </div>
     </div>
-    <div class="okvir">
-        <h2>Jeziki</h2>
-        <ul>
+    <div class="okvir4">
+        <div class="okvir2-1">
+        <h2>Jeziki in druge informacije</h2>
+        </div>
+    </div>
+    <div class="okvir4">
+        <ul class="izkusnje1">
             <li>Slovenščina (materni jezik)</li>
             <li>Nemščina C1</li>
             <li>Angleščina C1</li>
         </ul>
-    </div>
-    <div class="okvir" id="info">
-        <h2>Druge informacije</h2>
-        <ol>
+        <ul class="izkusnje1">
             <li>Vozniška B kategorije</li>
-        </ol>
+        </ul>
     </div>
 </body>
 
-<footer>2023</footer>
+<footer>2023 all rights reserved. Creator Andraz Dreo Kamenik</footer>
 
 </html>
