--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
     </div>
 </body>
 
-<footer>2023 all rights reserved. Creator Andraz Dreo Kamenik</footer>
+<footer>
+    <div class="kontakt">
+        <div class="info">
+            <ul>
+                <li>Andraž Dreo Kamenik</li>
+                <li>Knafelčeva ulica 24</li>
+                <li>2000 Maribor</li>
+                <li>Tel.: 031397748</li>
+                <li>E-mail: andray.kamenik@gmail.com</li>
+            </ul>
+
+        </div>
+
+    </div>
+    
+    
+    <div>2023 all rights reserved. Creator Andraz Dreo Kamenik</div>
+
+</footer>
 
 </html>
