--- a/index.html
+++ b/index.html
@@ -89,9 +89,20 @@
                 <li>Knafelčeva ulica 24</li>
                 <li>2000 Maribor</li>
                 <li>Tel.: 031397748</li>
-                <li>E-mail: andray.kamenik@gmail.com</li>
+                <li>E-mail: andraz.kamenik@gmail.com</li>
             </ul>
 
+        </div>
+        <div class="MailForm">
+            <form action="mailto:andraz.kamenik@gmail.com" method="get" enctype="text/plain">
+                Subject:<br>
+                <input type="text" name="subject" placeholder="Subject"><br>
+                Email:<br>
+                <input type="email" name="email" placeholder="Your Email"><br>
+                Message:<br>
+                <textarea name="body" rows="5" cols="30" placeholder="Your Message"></textarea><br>
+                <input type="submit" value="Send">
+              </form>
         </div>
 
     </div>
