--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="izkusnje1">
             <h3>Responsive Web Design</h3>
             <p>December 2021</p>
-            <button class="button" type="button"> <a href="https://www.freecodecamp.org/certification/fcc52bfc642-08ab-4236-b4cf-14185d2308c1/responsive-web-design">Certifikat</a></button>
+            <button class="button" role="button"><a href="https://www.freecodecamp.org/certification/fcc52bfc642-08ab-4236-b4cf-14185d2308c1/responsive-web-design">Certifikat</a></button>
         </div>
     </div>
     <div class="okvir4">
